static/css/watodoo.css
html {
	min-height: 100%;
}

body { 
	font-size:16px; 
	height: 100%;
	margin:0; 
	padding:0; 
	font-family:"Helvetica Neue",Helvetica,Arial,Sans-serif;
	font-size:0.875em;
	background:url("/images/bg.png") repeat-x scroll center top #C0C0C0;
	background-color:#FFFFFF;
}


h2 {
	color: #0D83DD;
	font-size: 18px;
	font-weight: bold;
}

h3 {
	color: #0D83DD;
	font-size: 12px;
	font-weight: bold;
}

h1 {
	font-size:42px;
	font-weight:bold;
	margin-bottom:5px;
	color:#333;
	line-height:80%;
}

p {
	font-color:#0D83DD;
	font-size:13px;
}

a:link {
	color:#0D83DD;
}

hr {
  border:0;
  border-top: 1px solid #333;
  height: 0;
  width: 280px;	
  background: #333;
}

#events_list {
	width: 100%;
	height: 465px;
	overflow-y: scroll;
	font-color:#333;
	font-size:13px;
}

#events_scroller {
	width: 290px;
}


/* Menu */

#menu {
	background-color: #191919;
	height:1.1em;
	border-bottom: 1px solid #373737;
}

#menu2 {
	background-color: #0D83DD;
	height:0.2em;
}

#menu3 {
	background-color: #191919;
	height:0.5em;
}

#menu ul {
	width: 800px;
	margin: 0 auto;
	padding: 0;
	bottom: 0;
	left: 0;
	list-style: none;
	font-family:"Palatino","Georgia","Baskerville",serif;
	font size: 30px;
}

.double-right-sidebar #menu ul {
	width: 947px;
	font size: 30px;
}

#menu ul li {
	float: right;
	font-family:"Palatino","Georgia","Baskerville",serif;
	font size: 30px;
}

#menu .page_item a {
	display: block;
	padding-right: 40px;
	line-height: 3.0em;
	color: #868686;
	text-decoration: none;
	font-family:"Palatino","Georgia","Baskerville",serif;
	font size: 30px;
}

#menu .current_page_item a, #menu .page_item a:hover {
	color: #fff;
	font-family:"Palatino","Georgia","Baskerville",serif;
	font size: 30px;
}


/* Header - one below menu */

#header { 
	height:95px;
}

#header_left {
	margin-left: 20px;
	margin-top: -15px;	
	float: left;
	font-color: #C9252B;
}

#header_left2 {
	margin-left: 60px;
	float: left;
	width: 400px;
	margin-top: 10px;
	font-color: #333;
}

p#header_left2 {
	color: #333;
	margin-top: 20px;
}

p#header_right {
	font-color: #333;
	font-size: 14px;
    font-weight: bold;
	
}

#header_right {
	  float:right;
	  margin-top:4px;
	  margin-right:10px;
	  text-align: right;
	  font-color: #333;
}

/* Left block */

#left { 
	float: left;
	width: 290px;
	min-height: 500px; /* for modern browsers */
	height:auto !important; /* for modern browsers */
	height:520px; /* for IE5.x and IE6 */
	border-style: solid;
	border-width: 0px;
	border-left-width: 0px;
	border-right-width: 0px;
	border-bottom-width: 0px;
	border-color: #333;
}

#left_margin {
	float: left;
	margin-left: 10px;
	height: 525px;
}

#left_block {
	border-style: dotted;
	border-width: 1px;
	border-color: #333; 
	font-color: #333;
	margin-right: 10px;
	margin-bottom: 10px;
}


/* Center */

div#map_canvas {
	max-height: 100%;
	min-height: 520px;
	width: 99%;
	border-style: solid;
	border-width: 1px;
	border-left-width: 1px;
	border-right-width: 1px;
	border-color: #333;
}

#center { 
	margin-left: 330px;
	min-height: 500px; /* for modern browsers */
	height: auto !important; /* for modern browsers */
	height: 500px; /* for IE5.x and IE6 */
}

#footer { 
	margin-top:5px;
	clear: both;
}


/* Events scroller */

#loader_container {
	width: 330px;
	text-align: center;
}

#events_container_table {
	border-top: 0px gray solid; 
	border-bottom: 0px gray solid;
	width: 290px; 
}

#events_title_cell {
	font-size: 18px; 
	width: 65%;
}

#events_filters_cell {
	text-align: right;
}

#time_filters_cell {
	text-align: right;
}

#categories_filter {
	cursor: pointer;
}

#time_filter {
	cursor: pointer;
}

#selected_category {
	color: #0D83DD; 
	font-size: 12px;
}

#selected_time {
	color: #0D83DD; 
	font-size: 12px;
}

#event_info {
	background-color: #F3F8FB; 
	padding: 5px;
}

#movies_scroller_item {
	width: 100%; 
	background-color: #F7F8E0; 
	font-weight: bold;
	cursor: pointer; 
	cursor: hand;
	padding: 10px;
}

#movie_scroller_link {
	padding-left: 15px;
	padding-right: 5px;
}

.events_scroller_item {
	width: 100%; 
	cursor: pointer; 
	cursor: hand;
}

.events_scroller_item_id {
	background-color: #F3F8FF;
	font-size: larger; 
	font-weight: bold; 
	padding: 3px; 
}

.events_scroller_category_image {
	border: 0; 
	width: 32px;
}

.events_scroller_venue {
	font-size: 12px; 
	width: 135px;
}

.events_scroller_start_date {
	color: gray; 
	font-size: 12px; 
	text-align: right;
}

/* Groupon deals. */
#groupon_deals {
	background-color: #F7F8E0; 
	border: 3px solid #76A045;
	color: #76A045;
	font-size: smaller;
	font-weight: bold;
	padding: 3px;
	position: absolute; bottom: 160px; right: 15px; z-index: 2; 
	text-align: left;
	height: 130px;
	width: 200px;
	overflow-y: scroll;
}

#powered_by_groupon {
	background-color: #F7F8E0; 
	border-top: 3px solid #76A045;
	border-left: 3px solid #76A045;
	border-right: 3px solid #76A045;
	height: 40px;
	width: 207px;
	position: absolute; bottom: 302px; right: 15px; z-index: 2; 
}

